solo falta p1 de Análisis de Las Notas v2

--- a/lab5/Laboratorio5_enunciado.ipynb
+++ b/lab5/Laboratorio5_enunciado.ipynb
@@ -20838,11 +20838,19 @@
     "deepnote_cell_type": "markdown"
    },
    "source": [
-    "```\n",
-    "Escriba aquí su justificación\n",
-    "```\n",
+    "1. ¿Existe una diferencia notable entre las notas?\n",
     "\n",
-    "Ignacio: Me falta escribir esto"
+    "\n",
+    "\n",
+    "2. ¿Cuál de los gráficos mostrados cree que es adecuado para mostrarle al rector? ¿Y a los padres? ¿Y a un centro de estudios educativos? ¿Por qué?\n",
+    "\n",
+    "El rector y los padres son dos receptores de la información que a priori no deberían tener conocimiento técnico como para que el mostrarles todo tipo de métricas sea buena idea, de esta forma lo más recomendable es mostrarles gráficos simples, fáciles de entender y con pocos tecnicismos, para esto es bueno el histograma con faceta, el cual cualquier persona puede entender, ya que solo muestra el conteo con respecto al score. En este gráfico se puede ver fácilmente la tendencia de los alumnos y que en particular en matemáticas el pico de nota más alto ocurre antes, es decir, la nota de mayor frecuencia es menor y que dado que la frecuencia por nota va decendiendo antes, el promedio en matematicas debe ser menor.\n",
+    "\n",
+    "Además, al rector puede interesarle el histograma con boxplots para ver las diferencias en rangos de notas entre asignaturas, ya que él esta a cargo y debe entender el panorama en detalle. Por esto mismo, el boxplot le ayudaría a entender en que parte del grafico se encuentra la gran parte de los alumnos y ver los outliers, estudiantes de los cuales también se tiene que hacer responsable, ya sea para tomar medida de apoyo, tutorías para alumnos en riesgo, sanciones como la expulsión, entre otras.\n",
+    "\n",
+    "Finalmente, dado que en este gráfico se muestran estos outliers, no es bueno que este gráfico se publique para los padres en general ya que contiene informacion sensible, donde se aprecian puntos en particular que se podrían asociar a estudiantes en específico. Es bueno informar a los padres de manera masiva, como en una reunión de curso, de la situacion general de los estudiantes y luego si es necesario la comparativa de su hijo con respecto al resto de los estudiantes de forma privada.\n",
+    "\n",
+    "Para un Centro de Estudios Educativos, se espera que el personal tenga conocimientos técnicos para comprender y analizar visualizaciones más detalladas. En este caso, se recomienda el uso del boxplot, ya que proporciona una gran cantidad de información de manera estructurada y concisa. Este gráfico incluye métricas resumidas, distribución de notas y valores atípicos, lo que permite una comprensión completa del desempeño de los estudiantes en cada asignatura. La información se presenta de manera ordenada y es fácilmente interpretable para aquellos con conocimientos técnicos, lo que facilita el análisis y la toma de decisiones informadas a nivel institucional.\n"
    ]
   },
   {
@@ -28144,7 +28152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.11"
   },
   "toc": {
    "base_numbering": 1,
