plot.vars lista pero sin funcionar bien

--- a/Proyecto1/Proyecto_enunciado.ipynb
+++ b/Proyecto1/Proyecto_enunciado.ipynb
@@ -154,20 +154,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "from datetime import datetime\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import chi2_contingency\n",
+    "from collections import Counter\n",
+    "import shutil\n",
+    "import numpy as np\n",
+    "\n",
     "\n",
     "df = pd.read_parquet('olimpiadas.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,52 +224,91 @@
     "                    \n",
     "                    file.write('\\n')\n",
     "                    \n",
-    "                    \n",
+    "    # Creación de los gráficos            \n",
+    "    def plot_vars(self, variables_of_interest=None, top_n_categories=5):\n",
+    "        plots_folder = os.path.join(self.output_folder, 'plots')\n",
+    "        os.makedirs(plots_folder, exist_ok=True)\n",
+    "\n",
+    "        if variables_of_interest is None:\n",
+    "            variables_of_interest = self.data.columns\n",
+    "\n",
+    "        for variable in variables_of_interest:\n",
+    "            if variable in self.data.columns:\n",
+    "                if pd.api.types.is_numeric_dtype(self.data[variable]):\n",
+    "                    self.plot_numeric_variable(variable, plots_folder)\n",
+    "\n",
+    "                elif pd.api.types.is_string_dtype(self.data[variable]):\n",
+    "                    self.plot_categorical_variable(variable, top_n_categories, plots_folder)\n",
+    "\n",
+    "    def plot_numeric_variable(self, variable, plots_folder):\n",
+    "        # Gráfico de densidad para variables numéricas usando Matplotlib\n",
+    "        plt.figure()\n",
+    "        plt.hist(self.data[variable], bins=30, color='blue', alpha=0.7)\n",
+    "        plt.xticks(rotation=45)\n",
+    "        plt.title(f'Distribución de {variable}')\n",
+    "        plot_filename = os.path.join(plots_folder, f'{variable}.pdf')\n",
+    "        plt.savefig(plot_filename, format='pdf')\n",
+    "        plt.close()\n",
+    "        \n",
+    "    def plot_categorical_variable(self, variable, top_n_categories, plots_folder):\n",
+    "        # Histograma de las top N categorías usando Matplotlib\n",
+    "        top_categories = self.data[variable].value_counts().nlargest(top_n_categories)\n",
+    "        fig = plt.figure()\n",
+    "        top_categories.plot(kind='bar', color='green', alpha=0.7)\n",
+    "        plt.title(f'Top {top_n_categories} Categorías de {variable}')\n",
+    "        plt.xticks(rotation=45)\n",
+    "        plot_filename = os.path.join(plots_folder, f'{variable}.pdf')\n",
+    "        plt.savefig(plot_filename, format='pdf')\n",
+    "        plt.close()\n",
+    "\n",
+    "        # Coeficiente V de Cramer entre las variables categóricas\n",
+    "        if top_n_categories > 1:\n",
+    "            # Limitar las categorías a las N principales\n",
+    "            top_categories = top_categories.index.tolist()\n",
+    "            self.data[variable] = self.data[variable].where(self.data[variable].isin(top_categories), 'Other')\n",
+    "\n",
+    "            chi2_contingency_result = chi2_contingency(pd.crosstab(self.data[variable], self.data[variable]))\n",
+    "            chi2 = chi2_contingency_result[0]\n",
+    "            n = self.data.shape[0]\n",
+    "            v_cramer = np.sqrt(chi2 / (n * (top_n_categories - 1)))\n",
+    "            \n",
+    "            # Gráfico del Coeficiente V de Cramer\n",
+    "            plt.figure()\n",
+    "            plt.bar([variable], [v_cramer], color='purple', alpha=0.7)\n",
+    "            plt.title(f'Coeficiente V de Cramer para {variable}')\n",
+    "            plt.xticks(rotation=45)\n",
+    "            plot_filename = os.path.join(plots_folder, f'{variable}_cramer.pdf')\n",
+    "            plt.savefig(plot_filename, format='pdf')\n",
+    "            plt.close()\n",
+    "\n",
+    "    # Elimina todos los archivos generados por la clase\n",
+    "    def clearGarbage(self):\n",
+    "        # Elimina las carpetas/archivos creados por la clase\n",
+    "        if os.path.exists(self.output_folder):\n",
+    "            shutil.rmtree(self.output_folder)\n",
+    "    \n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "profiler = Profiler(df)\n",
     "\n",
-    "profiler.summarize()"
+    "profiler.summarize()\n",
+    "profiler.plot_vars()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ID                                 135571\n",
-       "Name                   Tomasz Ireneusz ya\n",
-       "Sex                                     M\n",
-       "Team                               Poland\n",
-       "NOC                                   POL\n",
-       "Games                         2002 Winter\n",
-       "Year                                 2002\n",
-       "Season                             Winter\n",
-       "City                       Salt Lake City\n",
-       "Sport                           Bobsleigh\n",
-       "Event                Bobsleigh Men's Four\n",
-       "Medal                                None\n",
-       "age-height-weight         34.0(185.0?96.0\n",
-       "Name: 271115, dtype: object"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.iloc[-1]"
+    "profiler.clearGarbage()"
    ]
   },
   {
