Metodo clean_data, pero le falta pulido

--- a/Proyecto1/Proyecto_enunciado.ipynb
+++ b/Proyecto1/Proyecto_enunciado.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,11 +173,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>NOC</th>\n",
+       "      <th>Games</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Season</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Sport</th>\n",
+       "      <th>Event</th>\n",
+       "      <th>Medal</th>\n",
+       "      <th>age-height-weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A Dijiang</td>\n",
+       "      <td>M</td>\n",
+       "      <td>China</td>\n",
+       "      <td>CHN</td>\n",
+       "      <td>1992 Summer</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>Basketball</td>\n",
+       "      <td>Basketball Men's Basketball</td>\n",
+       "      <td>None</td>\n",
+       "      <td>24.0*180.0?80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>A Lamusi</td>\n",
+       "      <td>M</td>\n",
+       "      <td>China</td>\n",
+       "      <td>CHN</td>\n",
+       "      <td>2012 Summer</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Judo</td>\n",
+       "      <td>Judo Men's Extra-Lightweight</td>\n",
+       "      <td>None</td>\n",
+       "      <td>23.0(170.0?60.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Gunnar Nielsen Aaby</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>1920 Summer</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>Antwerpen</td>\n",
+       "      <td>Football</td>\n",
+       "      <td>Football Men's Football</td>\n",
+       "      <td>None</td>\n",
+       "      <td>24.0(nan?nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Edgar Lindenau Aabye</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Denmark/Sweden</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>1900 Summer</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>Tug-Of-War</td>\n",
+       "      <td>Tug-Of-War Men's Tug-Of-War</td>\n",
+       "      <td>Gold</td>\n",
+       "      <td>34.0:nan?nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Christine Jacoba Aaftink</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>NED</td>\n",
+       "      <td>1988 Winter</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Calgary</td>\n",
+       "      <td>Speed Skating</td>\n",
+       "      <td>Speed Skating Women's 500 metres</td>\n",
+       "      <td>None</td>\n",
+       "      <td>21.0(185.0?82.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271111</th>\n",
+       "      <td>135569</td>\n",
+       "      <td>Andrzej ya</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Poland-1</td>\n",
+       "      <td>POL</td>\n",
+       "      <td>1976 Winter</td>\n",
+       "      <td>1976</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Innsbruck</td>\n",
+       "      <td>Luge</td>\n",
+       "      <td>Luge Mixed (Men)'s Doubles</td>\n",
+       "      <td>None</td>\n",
+       "      <td>29.0:179.0?89.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271112</th>\n",
+       "      <td>135570</td>\n",
+       "      <td>Piotr ya</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>POL</td>\n",
+       "      <td>2014 Winter</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Sochi</td>\n",
+       "      <td>Ski Jumping</td>\n",
+       "      <td>Ski Jumping Men's Large Hill, Individual</td>\n",
+       "      <td>None</td>\n",
+       "      <td>27.0:176.0?59.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271113</th>\n",
+       "      <td>135570</td>\n",
+       "      <td>Piotr ya</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>POL</td>\n",
+       "      <td>2014 Winter</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Sochi</td>\n",
+       "      <td>Ski Jumping</td>\n",
+       "      <td>Ski Jumping Men's Large Hill, Team</td>\n",
+       "      <td>None</td>\n",
+       "      <td>27.0*176.0?59.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271114</th>\n",
+       "      <td>135571</td>\n",
+       "      <td>Tomasz Ireneusz ya</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>POL</td>\n",
+       "      <td>1998 Winter</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Nagano</td>\n",
+       "      <td>Bobsleigh</td>\n",
+       "      <td>Bobsleigh Men's Four</td>\n",
+       "      <td>None</td>\n",
+       "      <td>30.0(185.0?96.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271115</th>\n",
+       "      <td>135571</td>\n",
+       "      <td>Tomasz Ireneusz ya</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>POL</td>\n",
+       "      <td>2002 Winter</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Salt Lake City</td>\n",
+       "      <td>Bobsleigh</td>\n",
+       "      <td>Bobsleigh Men's Four</td>\n",
+       "      <td>None</td>\n",
+       "      <td>34.0(185.0?96.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>271116 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            ID                      Name Sex            Team  NOC  \\\n",
+       "0            1                 A Dijiang   M           China  CHN   \n",
+       "1            2                  A Lamusi   M           China  CHN   \n",
+       "2            3       Gunnar Nielsen Aaby   M         Denmark  DEN   \n",
+       "3            4      Edgar Lindenau Aabye   M  Denmark/Sweden  DEN   \n",
+       "4            5  Christine Jacoba Aaftink   F     Netherlands  NED   \n",
+       "...        ...                       ...  ..             ...  ...   \n",
+       "271111  135569                Andrzej ya   M        Poland-1  POL   \n",
+       "271112  135570                  Piotr ya   M          Poland  POL   \n",
+       "271113  135570                  Piotr ya   M          Poland  POL   \n",
+       "271114  135571        Tomasz Ireneusz ya   M          Poland  POL   \n",
+       "271115  135571        Tomasz Ireneusz ya   M          Poland  POL   \n",
+       "\n",
+       "              Games  Year  Season            City          Sport  \\\n",
+       "0       1992 Summer  1992  Summer       Barcelona     Basketball   \n",
+       "1       2012 Summer  2012  Summer          London           Judo   \n",
+       "2       1920 Summer  1920  Summer       Antwerpen       Football   \n",
+       "3       1900 Summer  1900  Summer           Paris     Tug-Of-War   \n",
+       "4       1988 Winter  1988  Winter         Calgary  Speed Skating   \n",
+       "...             ...   ...     ...             ...            ...   \n",
+       "271111  1976 Winter  1976  Winter       Innsbruck           Luge   \n",
+       "271112  2014 Winter  2014  Winter           Sochi    Ski Jumping   \n",
+       "271113  2014 Winter  2014  Winter           Sochi    Ski Jumping   \n",
+       "271114  1998 Winter  1998  Winter          Nagano      Bobsleigh   \n",
+       "271115  2002 Winter  2002  Winter  Salt Lake City      Bobsleigh   \n",
+       "\n",
+       "                                           Event Medal age-height-weight  \n",
+       "0                    Basketball Men's Basketball  None   24.0*180.0?80.0  \n",
+       "1                   Judo Men's Extra-Lightweight  None   23.0(170.0?60.0  \n",
+       "2                        Football Men's Football  None      24.0(nan?nan  \n",
+       "3                    Tug-Of-War Men's Tug-Of-War  Gold      34.0:nan?nan  \n",
+       "4               Speed Skating Women's 500 metres  None   21.0(185.0?82.0  \n",
+       "...                                          ...   ...               ...  \n",
+       "271111                Luge Mixed (Men)'s Doubles  None   29.0:179.0?89.0  \n",
+       "271112  Ski Jumping Men's Large Hill, Individual  None   27.0:176.0?59.0  \n",
+       "271113        Ski Jumping Men's Large Hill, Team  None   27.0*176.0?59.0  \n",
+       "271114                      Bobsleigh Men's Four  None   30.0(185.0?96.0  \n",
+       "271115                      Bobsleigh Men's Four  None   34.0(185.0?96.0  \n",
+       "\n",
+       "[271116 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Profiler():\n",
+    "    # 1\n",
     "    def __init__(self, data):\n",
     "        self.data = data\n",
     "        self.timestamp = datetime.now().strftime('%d-%m-%Y')\n",
@@ -185,7 +461,7 @@
     "        os.makedirs(self.output_folder, exist_ok=True)\n",
     "        \n",
     "        \n",
-    "        \n",
+    "    # 2  \n",
     "    def summarize(self, variables_of_interest=None, criteria_for_outliers=None):\n",
     "        if variables_of_interest is None:\n",
     "            variables_of_interest = self.data.columns\n",
@@ -224,7 +500,7 @@
     "                    \n",
     "                    file.write('\\n')\n",
     "                    \n",
-    "    # Creación de los gráficos            \n",
+    "    # 3          \n",
     "    def plot_vars(self, variables_of_interest=None, top_n_categories=5):\n",
     "        plots_folder = os.path.join(self.output_folder, 'plots')\n",
     "        os.makedirs(plots_folder, exist_ok=True)\n",
@@ -280,8 +556,59 @@
     "            plot_filename = os.path.join(plots_folder, f'{variable}_cramer.pdf')\n",
     "            plt.savefig(plot_filename, format='pdf')\n",
     "            plt.close()\n",
+    "            \n",
+    "            \n",
+    "    # 4\n",
+    "    def clean_data(self, variables_of_interest=None, drop_duplicates=True, drop_na=True, impute_na=False):\n",
+    "        clean_data_folder = os.path.join(self.output_folder, 'clean_data')\n",
+    "        os.makedirs(clean_data_folder, exist_ok=True)\n",
     "\n",
-    "    # Elimina todos los archivos generados por la clase\n",
+    "        data_to_clean = self.data.copy()\n",
+    "\n",
+    "        if variables_of_interest is not None:\n",
+    "            data_to_clean = data_to_clean[variables_of_interest]\n",
+    "\n",
+    "        if drop_duplicates:\n",
+    "            data_to_clean.drop_duplicates(inplace=True)\n",
+    "\n",
+    "        if drop_na:\n",
+    "            data_to_clean.dropna(inplace=True)\n",
+    "\n",
+    "        if impute_na:\n",
+    "            # Implementa aquí la técnica de imputación que prefieras\n",
+    "            # Por ejemplo, puedes usar data_to_clean.fillna(valor_imputado, inplace=True)\n",
+    "            pass\n",
+    "\n",
+    "        # Detecta automáticamente la columna con datos no atómicos\n",
+    "        non_atomic_column = self.detect_non_atomic_column(data_to_clean)\n",
+    "        print(non_atomic_column)\n",
+    "        if non_atomic_column:\n",
+    "            separator = self.detect_separator(data_to_clean[non_atomic_column])\n",
+    "            if separator:\n",
+    "                separated_columns = data_to_clean[non_atomic_column].str.split(separator, expand=True)\n",
+    "                data_to_clean = pd.concat([data_to_clean, separated_columns], axis=1)\n",
+    "                data_to_clean.drop(columns=[non_atomic_column], inplace=True)\n",
+    "\n",
+    "        data_to_clean.to_csv(os.path.join(clean_data_folder, 'data.csv'), index=False)\n",
+    "\n",
+    "    def detect_non_atomic_column(self, data):\n",
+    "        # Busca una columna que contenga caracteres especiales o separadores\n",
+    "        for column in data.columns:\n",
+    "            if any(char in column for char in ('-', ';', ':', '|')):\n",
+    "                return column\n",
+    "        return None\n",
+    "\n",
+    "    def detect_separator(self, series):\n",
+    "        # Detecta el separador más común en una serie\n",
+    "        separators = ['-', ';', ':', '|']\n",
+    "        for separator in separators:\n",
+    "            if series.str.contains(separator).all():\n",
+    "                return separator\n",
+    "        return None\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    # 9\n",
     "    def clearGarbage(self):\n",
     "        # Elimina las carpetas/archivos creados por la clase\n",
     "        if os.path.exists(self.output_folder):\n",
@@ -292,19 +619,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age-height-weight\n"
+     ]
+    }
+   ],
    "source": [
     "profiler = Profiler(df)\n",
     "\n",
     "profiler.summarize()\n",
-    "profiler.plot_vars()\n"
+    "profiler.plot_vars()\n",
+    "profiler.clean_data()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
